--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>uixecure會員入口網</title>
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/style.min.css">
+    <!-- angularjs -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="./assets/javascript/app.js"></script>
 </head>
-<body>
+<body ng-app="myApp" ng-controller="myCtrl">
     <!-- header starts -->
     <header class="header bg-gray-800">
         <nav class="d-flex align-items-center">
@@ -17,14 +20,31 @@
                     <img src="./assets/images/logo.png" alt="uixecure會員網logo">
                 </a>
             </div>
-            <div class="navbar d-flex justify-content-between">
-                <ul>
+            <div class="navbar">
+                <ul class="menu">
                     <li><a href="https://www.unixecure.com/tw/index" target="_blank">智慧資安入口網</a></li>
                     <li><a href="#">儀表板</a></li>
                     <li><a href="product_solutions.html">產品方案列表</a></li>
-                    <li><a href="product_forum.html">產品問題討論</a></li>
+                    <li><a href="support-center.html">支援中心</a></li>
+                    <li><a href="#" class="language-phone"><span class="mr-3">繁體中文</span><i class="fa-solid fa-globe"></i></a>
+                        <ul class="language-menu">
+                            <li><a href="#">繁體中文</a></li>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">日本語</a></li>
+                        </ul>
+                    </li>
                 </ul>
-                <a href="login.html" class="sign_up">登入/註冊</a>
+                <ul>
+                    <li><a href="login.html" class="sign_up">登入/註冊</a></li>
+                    <li class="d-lg-block d-none"><a href="#" class="btn language hide fa-solid fa-globe"></a>
+                        <ul class="dropdown">
+                            <li class="active"><a href="#">繁體中文</a></li>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">日本語</a></li>
+                        </ul>
+                    </li>
+                    <li class="d-block d-lg-none"><button type="button" class="btn bars"><i class="fa-solid fa-bars"></i></button></li>
+                </ul>                
             </div>
         </nav>
     </header>
@@ -36,7 +56,7 @@
                 <div class="col-12"><h1 class="text-center text-primary-800">產品價格列表</h1></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <div class="product-card d-flex flex-column">
                         <div class="product-card-body flex-grow-1 d-flex flex-column">
                             <h3 class="text-primary mb-4 d-flex align-items-center justify-content-center text-center">SIVAS<br />端點弱點評鑑系統</h3>
@@ -69,7 +89,7 @@
                         <button type="button" class="btn product-card-btn">加入購物車 <i class="fa-solid fa-cart-shopping"></i></button>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <div class="product-card d-flex flex-column">
                         <div class="product-card-body flex-grow-1 d-flex flex-column">
                             <h3 class="text-primary mb-4 d-flex align-items-center justify-content-center text-center">網頁弱點掃描服務</h3>
@@ -106,9 +126,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center">
+                    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
                         <div class="mb-3">
-                            <img src="./assets/images/logo.png" alt="uixecure logo">
+                            <img src="./assets/images/footer-logo.png" alt="uixecure logo">
                         </div>
                         <div class="shart">
                             <a href="https://www.youtube.com/channel/UC6VCxEoyhbVVuzyUY3hQmEA/featured" target="_blank"><i class="fa-brands fa-youtube"></i></a>
@@ -119,7 +139,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="d-flex  flex-column flex-lg-row mb-3">
+                    <div class="d-flex  flex-column flex-md-row mb-3">
                         <div class="mr-3">服務信箱</div>
                         <div><a href="mailto:servicedesk@unixecure.com.tw" class="footer-mail">servicedesk@unixecure.com.tw</a></div>
                     </div>
@@ -144,7 +164,7 @@
                 <div class="col-12">
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <a href="copyright-privacy.html" class="copyright">著作權及隱私權聲明</a>
-                        <div class="text-primary-50"><span class="text-primary-50 mr-3">精誠集團</span>智慧資安科技股份有限公司 © <span class="year">2023</span></div>
+                        <div class="text-primary-50"><span class="text-primary-50 mr-3">精誠集團</span>智慧資安科技股份有限公司 © {{ year }}</div>
                     </div>
                 </div>
             </div>
