--- a/sign_up.html
+++ b/sign_up.html
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="form-check mb-3">
                                     <input class="form-check-input" type="checkbox" value="我同意" id="assent-option">
-                                    <label class="form-check-label" for="assent-option">我同意 <a href="#" class="link-outline-primary">客戶隱私權政策</a> 與 <a href="#" class="link-outline-primary">客戶服務條款</a></label>
+                                    <label class="form-check-label" for="assent-option">我同意 <a href="privacy.html" class="link-outline-primary fw-bold">隱私權政策</a> 與 <a href="register-agreement.html" class="link-outline-primary fw-bold">會員註冊條款</a></label>
                                     <span class="text-alarm">*</span>
                                 </div>
                             </div>
