--- a/member/04_member.html
+++ b/member/04_member.html
@@ -23,9 +23,9 @@
             <div class="navbar">
                 <ul class="menu">
                     <li><a href="https://www.unixecure.com/tw/index" target="_blank">智慧資安入口網</a></li>
-                    <li><a href="#">儀表板</a></li>
-                    <li><a href="product_solutions.html">產品方案列表</a></li>
-                    <li><a href="support-center.html">支援中心</a></li>
+                    <!-- <li><a href="#">儀表板</a></li> -->
+                    <li><a href="../product/02_product_solutions.html">產品方案列表</a></li>
+                    <li><a href="../support/03_support.html">支援中心</a></li>
                     <li class="d-block d-lg-none">
                         <a href="#" class="btn-member member ml-4" ng-click="memberPhoneToggle()"><i class="fa-solid fa-user"></i> 會員中心</a>
                         <ul class="dropdown member-dropdown hide" ng-class="memberPhone ? 'show' : 'hide'">
@@ -147,31 +147,31 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <!-- pagination starts -->
-                            <div id="pagination" class="pagination mt-3">
-                                <button class="pagination-button" id="first-button" title="Previous page" aria-label="Previous page">
-                                    <i class="fa-solid fa-angles-left"></i>
-                                </button>
-                                <button class="pagination-button" id="prev-button" title="Previous page" aria-label="Previous page">
-                                    <i class="fa-solid fa-angle-left"></i>
-                                </button>
-                                <ul id="pagination-numbers" class="pagination-numbers">
-                                    <li class="number">1</li>
-                                    <li class="number">2</li>
-                                    <li class="number">3</li>
-                                    <li class="number">4</li>
-                                    <li class="number">5</li>
-                                    <li class="number">6</li>
-                                </ul>
-                                <button class="pagination-button" id="next-button" title="Next page" aria-label="Next page">
-                                    <i class="fa-solid fa-angle-right"></i>
-                                </button>
-                                <button class="pagination-button" id="last-button" title="Next page" aria-label="Next page">
-                                    <i class="fa-solid fa-angles-right"></i>
-                                </button>
-                            </div>
-                            <!-- pagination ends -->
                         </div>
+                        <!-- pagination starts -->
+                        <div id="pagination" class="pagination mt-3">
+                            <button class="pagination-button" id="first-button" title="Previous page" aria-label="Previous page">
+                                <i class="fa-solid fa-angles-left"></i>
+                            </button>
+                            <button class="pagination-button" id="prev-button" title="Previous page" aria-label="Previous page">
+                                <i class="fa-solid fa-angle-left"></i>
+                            </button>
+                            <ul id="pagination-numbers" class="pagination-numbers">
+                                <li class="number">1</li>
+                                <li class="number">2</li>
+                                <li class="number">3</li>
+                                <li class="number">4</li>
+                                <li class="number">5</li>
+                                <li class="number">6</li>
+                            </ul>
+                            <button class="pagination-button" id="next-button" title="Next page" aria-label="Next page">
+                                <i class="fa-solid fa-angle-right"></i>
+                            </button>
+                            <button class="pagination-button" id="last-button" title="Next page" aria-label="Next page">
+                                <i class="fa-solid fa-angles-right"></i>
+                            </button>
+                        </div>
+                        <!-- pagination ends -->
                     </div>
                 </div>
             </div>
