--- a/member/04_reserve_detection_heis.html
+++ b/member/04_reserve_detection_heis.html
@@ -23,9 +23,9 @@
             <div class="navbar">
                 <ul class="menu">
                     <li><a href="https://www.unixecure.com/tw/index" target="_blank">智慧資安入口網</a></li>
-                    <li><a href="#">儀表板</a></li>
-                    <li><a href="product_solutions.html">產品方案列表</a></li>
-                    <li><a href="support-center.html">支援中心</a></li>
+                    <!-- <li><a href="#">儀表板</a></li> -->
+                    <li><a href="../product/02_product_solutions.html">產品方案列表</a></li>
+                    <li><a href="../support/03_support.html">支援中心</a></li>
                     <li class="d-block d-lg-none">
                         <a href="#" class="btn-member member ml-4" ng-click="memberPhoneToggle()"><i class="fa-solid fa-user"></i> 會員中心</a>
                         <ul class="dropdown member-dropdown hide" ng-class="memberPhone ? 'show' : 'hide'">
