--- a/product/02_product_solutions.html
+++ b/product/02_product_solutions.html
@@ -23,9 +23,9 @@
             <div class="navbar">
                 <ul class="menu">
                     <li><a href="https://www.unixecure.com/tw/index" target="_blank">智慧資安入口網</a></li>
-                    <li><a href="#">儀表板</a></li>
-                    <li><a href="product_solutions.html">產品方案列表</a></li>
-                    <li><a href="support-center.html">支援中心</a></li>
+                    <!-- <li><a href="#">儀表板</a></li> -->
+                    <li><a href="02_product_solutions.html">產品方案列表</a></li>
+                    <li><a href="../support/03_support.html">支援中心</a></li>
                     <li class="d-block d-lg-none">
                         <a href="#" class="btn-member member ml-4" ng-click="memberPhoneToggle()"><i class="fa-solid fa-user"></i> 會員中心</a>
                         <ul class="dropdown member-dropdown hide" ng-class="memberPhone ? 'show' : 'hide'">
@@ -74,7 +74,7 @@
                 <div class="col-12"><h1 class="text-center text-primary-800">產品價格列表</h1></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <div class="product-card d-flex flex-column">
                         <div class="product-card-body flex-grow-1 d-flex flex-column">
                             <h3 class="text-primary mb-4 d-flex align-items-center justify-content-center text-center">SIVAS<br />端點弱點評鑑系統</h3>
@@ -98,8 +98,10 @@
                             </div>                                                       
                             <p class="fw-bold mb-3">選擇套數</p>
                             <div class="d-flex product-card-body-number">
-                                <button type="button" class="btn"><i class="fa-solid fa-minus"></i></button>
-                                <input type="number" class="product-number flex-grow-1 d-flex align-items-center" value="10" />
+                                <button type="button" class="btn" disabled><i class="fa-solid fa-minus"></i></button>
+                                <div class="flex-grow-1 product-number">
+                                    <input type="number" value="10" />
+                                </div>
                                 <button type="button" class="btn"><i class="fa-solid fa-plus-large"></i></button>
                             </div>
                             <p class="text-primary text-center fw-bold fs-6 mt-4">總金額 NT$ 187,500</p>
@@ -107,7 +109,7 @@
                         <button type="button" class="btn product-card-btn">加入購物車 <i class="fa-solid fa-cart-shopping"></i></button>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <div class="product-card d-flex flex-column">
                         <div class="product-card-body flex-grow-1 d-flex flex-column">
                             <h3 class="text-primary mb-4 d-flex align-items-center justify-content-center text-center">網頁弱點掃描服務</h3>
