--- a/support/03_support_search.html
+++ b/support/03_support_search.html
@@ -88,70 +88,21 @@
         <!--  -->
         <div class="support-content">
             <div class="container">
-                <!--  -->
-                <div class="row">
-                    <div class="col-md-4 mb-5">
-                        <a href="#" class="support-block moc d-flex justify-content-between align-items-center h-100">
-                            <h3 class="text-white my-4">MOC</h3>
-                            <figure class="d-none d-lg-block">
-                                <img src="../assets/images/support_img_01.png" alt="" class="img-fluid">
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <a href="#" class="support-block sivas d-flex justify-content-between align-items-center h-100">
-                            <h3 class="text-white my-4">SIVAS</h3>
-                            <figure class="d-none d-lg-block">
-                                <img src="../assets/images/support_img_02.png" alt="" class="img-fluid">
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <a href="#" class="support-block heis d-flex justify-content-between align-items-center h-100">
-                            <h3 class="text-white my-4">HEIS</h3>
-                            <figure class="d-none d-lg-block">
-                                <img src="../assets/images/support_img_03.png" alt="" class="img-fluid">
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-md-4 mb-5">
-                        <h4 class="border-bottom pb-3"><i class="fa-solid fa-wrench mr-2 fs-6"></i>使用操作</h4>
-                        <ul class="support-heading-list">
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                            <li><a href="#">修正常見登入問題</a></li>
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <h4 class="border-bottom pb-3"><i class="fa-solid fa-file-arrow-down mr-2 fs-6"></i>授權安裝</h4>
-                        <ul class="support-heading-list">
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                            <li><a href="#">修正常見登入問題</a></li>
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <h4 class="border-bottom pb-3"><i class="fa-solid fa-planet-ringed mr-2 fs-6"></i>系統安裝</h4>
-                        <ul class="support-heading-list">
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                            <li><a href="#">修正常見登入問題</a></li>
-                            <li><a href="#">變更個人資訊</a></li>
-                            <li><a href="#">SMARS 啟動失敗</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- 最新討論 -->
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="mb-4"><i class="fa-solid fa-star mr-2 fs-6"></i>最新討論</h3>
+                        <div class="d-md-flex align-items-center py-4 fs-6">
+                            <div class="mb-4 mb-md-0 mr-4">「系統打不開」的搜尋結果：共 43 筆資料，每頁顯示</div>
+                            <div class="d-flex align-items-center">
+                                <select name="" id="" class="form-select mr-3">
+                                    <option value="10">10</option>
+                                    <option value="10">20</option>
+                                    <option value="10">50</option>
+                                </select>
+                                <span>筆</span>
+                        </div>
+                    </div>
+                    <!-- 最新討論 -->
+                    <div class="col-12">
                         <div class="support-forum">
                             <a href="03_support_content.html" class="support-forum-content mb-4">
                                 <h4 class="link-status-primary mb-2">SMARS 打不開</h4>
